err/symmetricjsonrpc.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/symmetricjsonrpc'...
Compiling './lib/python3.5/site-packages/symmetricjsonrpc/dispatcher.py'...
***   File "./lib/python3.5/site-packages/symmetricjsonrpc/dispatcher.py", line 66
    if self.debug_thread: print "%s: BEGIN" % self.getName()
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/symmetricjsonrpc/json.py'...
***   File "./lib/python3.5/site-packages/symmetricjsonrpc/json.py", line 379
    def pair_begin(self): print '('; print self.state; return super(DebugTokenizer, self).pair_begin()
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/symmetricjsonrpc/rpc.py'...
***   File "./lib/python3.5/site-packages/symmetricjsonrpc/rpc.py", line 74
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/symmetricjsonrpc/wrappers.py'...
***   File "./lib/python3.5/site-packages/symmetricjsonrpc/wrappers.py", line 75
    if debug_write: print "write(%s)" % (repr(data),)
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/symmetricjsonrpc-0.1.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
